--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,13 +35,12 @@
             <li><a href="#!">Scan Port</a></li>
             <li><a href="#!">About</a></li>
             <li><a href="#!">Contact</a></li>
-            <center>
-                <a href="https://github.com/vinitshahdeo/PortScanner">
-                    <i class="fa fa-github" style=" font-size:48px; color:#3b6978">
-                    </i>
-                </a>
-            </center>
-
+                <div style="text-align: center; margin-top: 70vh;">
+                    <a href="https://github.com/vinitshahdeo/PortScanner">
+                        <i class="fa fa-github" style="font-size:48px; color:#3b6978;">
+                        </i>
+                    </a>
+                </div>
         </ul>
 
         <script type="text/javascript" src="static/js/materialize.min.js"></script>
